--- a/arch/arm64/configs/aio_otfp_defconfig
+++ b/arch/arm64/configs/aio_otfp_defconfig
@@ -554,6 +554,7 @@ CONFIG_CPU_FREQ_GOV_ALUCARD=y
 CONFIG_CPU_FREQ_GOV_WHEATLEY=y
 CONFIG_CPU_FREQ_GOV_PEGASUSQ=y
 CONFIG_CPU_FREQ_GOV_RENICE=y
+CONFIG_CPU_FREQ_GOV_ELEMENTALX=y
 
 #THUNDERQUAKE AND DTW
 CONFIG_THUNDERQUAKE_ENGINE_GPL=y
