--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -129,6 +129,13 @@ config CPU_FREQ_DEFAULT_GOV_INTERACTIVE
 	  you to get a full dynamic cpu frequency capable system by simply
 	  loading your cpufreq low-level hardware driver, using the
 	  'interactive' governor for latency-sensitive workloads.
+	  
+	  config CPU_FREQ_DEFAULT_GOV_ELEMENTALX
+  	bool "elementalx"
+  	select CPU_FREQ_GOV_ELEMENTALX
+  	select CPU_FREQ_GOV_PERFORMANCE
+  	help
+  	  Use the CPUFreq governor 'elementalx' as default.
 
 config CPU_FREQ_DEFAULT_GOV_BALANCE
 	bool "balance"
